--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discordbot",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
-    "ssh2": "^1.16.0"
+    "ssh2": "^1.16.0",
+    "@discordjs/builders": "^1.10.0"
   }
 }
