--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "discordbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  },
+  "main": "bot.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
