--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "discordbot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "bot.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7",
-    "ssh2": "^1.16.0",
-    "@discordjs/builders": "^1.10.0"
-  }
+   "name": "DBSI",
+   "version": "1.0.0",
+   "description": "A Discord Bot for Server Intagration",
+   "main": "bot.js",
+   "keywords": [
+      "discord",
+      "discord-bot",
+      "ssh",
+      "command-bot",
+      "nodejs",
+      "bot",
+      "automation",
+      "chatbot",
+      "discord.js"
+   ],
+   "author": "ripsnotntear@gmail.com",
+   "license": "MIT",
+   "type": "commonjs",
+   "dependencies": {
+      "discord.js": "^14.18.0",
+      "dotenv": "^16.4.7",
+      "ssh2": "^1.16.0",
+      "@discordjs/builders": "^1.10.0"
+   }
 }
