--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbsi",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A Discord bot for SSH commands and server management tasks",
   "main": "bot.js",
   "scripts": {
@@ -27,8 +27,8 @@
     "ssh2": "^1.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.42.0",  // Update this to the latest version
-    "nodemon": "^2.0.22"   // Update this to the latest version
+    "eslint": "^8.42.0",
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=16.9.0"
