--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: ServerBot For Discord 1.0
+name: dbsi
 
 on:
   release:
@@ -32,7 +32,7 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
-        run: npm ci discord.js ssh2 dotenv
+        run: npm install ci discord.js ssh2 dotenv
       - name: Publish package
         run: npm publish
         env:
