--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
-        run: npm install ci discord.js ssh2 dotenv
+        run: npm install discord.js ssh2 dotenv
       - name: Publish package
         run: npm publish
         env:
