--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbsi",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "A Discord bot for SSH commands and server management tasks",
   "main": "bot.js",
   "scripts": {
@@ -34,5 +34,11 @@
   },
   "engines": {
     "node": ">=16.9.0"
-  }
+  },
+  "files": [
+    ".env.example",
+    "bot.js",
+    "package.json",
+    "package-lock.json"
+  ]
 }
