--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbsi",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "A Discord bot for SSH commands and server management tasks",
   "main": "bot.js",
   "scripts": {
@@ -33,7 +33,7 @@
     "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": ">=16.9.0"
+    "node": ">=11.2.0 <24.0.0"
   },
   "files": [
     ".env.example",
