--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@ lerna-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Other files
-README.md
-MIT.license
 .github/workflows/npm-publish.yml
 .gitignore
+.npmignore
+package-lock.json
 
 # Runtime data
 pids
