--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DISCORD_TOKEN=INSERT_TOKEN_HERE
+TOKEN=INSERT_TOKEN_HERE
 SERVER_ADDR=INSERT_SERVER_ADDRESS_HERE
 SSH_PORT=INSERT_SSH_PORT_HERE
 SSH_USER=INSERT_SSH_USER_HERE
