--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Other files
 .github/workflows/npm-publish.yml
 .gitignore
-.npmignore
 package-lock.json
 
 # Runtime data
@@ -83,6 +82,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
