--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Other files
 .github/workflows/npm-publish.yml
+.eslintrc.js
 .gitignore
 .npmignore
 LICENSE.md
