--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Other files
 .github/workflows/npm-publish.yml
-.eslintrc.js
 .gitignore
 .npmignore
+eslint.config.js
 LICENSE.md
 SECURITY.md
 package-lock.json
