--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Run linting
-        run: npm run lint # Run ESLint to check for code quality issues
+        run: npx eslint . --config eslint.config.js # Specify the config file if needed
 
       - name: Run tests
         run: npm test # Adjust this if you have a specific test command
