--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test # Adjust this if you have a specific test command
+      - name: Pack up the files
+        run: npm pack
 
       - name: Publish to npm
         run: npm publish
