--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "dbsi",
-  "version": "1.2.5",
-  "description": "A Discord bot for SSH commands and server management tasks",
-  "main": "bot.js",
+  "version": "2.0.0",
+  "description": "A secure Discord bot for SSH commands and server management tasks",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev:watch": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "deploy": "npm run build && npm start",
+    "docker:build": "docker build -t discord-ssh-bot .",
+    "docker:run": "docker run -d --name discord-bot discord-ssh-bot"
   },
   "keywords": [
     "discord",
@@ -16,27 +29,58 @@
     "bot",
     "automation",
     "chatbot",
-    "discord.js"
+    "discord.js",
+    "typescript",
+    "security",
+    "server-management"
   ],
   "author": "ripsnortntear@gmail.com",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
-    "glob": "^11.0.1",
-    "rimraf": "^6.0.1",
-    "ssh2": "^1.16.0"
+    "ssh2": "^1.16.0",
+    "winston": "^3.11.0",
+    "joi": "^17.11.0",
+    "rate-limiter-flexible": "^5.0.3",
+    "node-cron": "^3.0.3",
+    "sqlite3": "^5.1.6",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "helmet": "^7.1.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.10.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.11",
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^6.0.2"
   },
   "engines": {
-    "node": ">=11.2.0 <24.0.0"
+    "node": ">=18.0.0 <21.0.0"
   },
   "files": [
+    "dist/",
     "README.md",
-    "bot.js",
-    "package.json"
+    "package.json",
+    "LICENSE"
   ],
   "type": "commonjs"
 }
