--- a/package.json
+++ b/package.json
@@ -32,7 +32,26 @@
     "discord.js",
     "typescript",
     "security",
-    "server-management"
+    "server-management",
+    "remote-access",
+    "ssh-client",
+    "server-control",
+    "command-execution",
+    "discord-integration",
+    "secure-bot",
+    "management-bot",
+    "remote-server",
+    "ssh-bot",
+    "discord-ssh",
+    "automation-tool",
+    "devops",
+    "infrastructure-management",
+    "linux-server",
+    "unix",
+    "remote-management",
+    "encrypted",
+    "authenticated",
+    "rate-limited"
   ],
   "author": "ripsnortntear@gmail.com",
   "license": "MIT",
